# dirt

./: .bentoignore  .gitignore  .gitmodules  Dockerfile  Dockerfile-aws.template  Dockerfile-conda_cuda.template  Dockerfile-tf.template  Dockerfile.template  bentoctl.tfvars  bentofile.yaml  build_scripts  deployment_config.yaml  env.yml  environment.nix  gen_mnist_onnx.py  locustfile.py  mnist.onnx  service.py  service_onnx.py  setup_script  spec.py  test.txt  train.py  watch.py
dockerfiles/: Dockerfile  Dockerfile-nginx.template  Dockerfile.template
lib/: quickstart_bentoml-0.0.1-py3-none-any.whl
scratch/: extra-requirements.txt
tfops/: dry_run  zero_out.cc
ticket-custom-runner/: bentofile.yaml  build_scripts  pyproject.toml  service.py  setup.cfg
yolo/: detect.py  export.py  hubconf.py  service.py  train.py  val.py
yolo/models/: common.py  experimental.py  tf.py  yolo.py
yolo/utils/: __init__.py  augmentations.py  autoanchor.py  autobatch.py  benchmarks.py  dataloaders.py  downloads.py  general.py  metrics.py  plots.py  torch_utils.py
yolo/utils/aws/: resume.py
yolo/utils/flask_rest_api/: restapi.py
yolo/utils/loggers/: __init__.py
yolo/utils/loggers/wandb/: log_dataset.py  sweep.py  wandb_utils.py
