[metadata]
name = quickstart-bentoml
version = 0.0.1
description = Quickstart Gallery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bentoml/gallery
author = BentoML Team
author_email = contact@bentoml.ai
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries
keywords = MLOps, AI, BentoML, Model Serving, Model Deployment
project_urls =
    Documentation = https://docs.bentoml.org/en/latest/
    Bug Reports = https://github.com/bentoml/BentoML/issues
    BentoML Community Slack = https://bit.ly/2N5IpbB
    BentoML Official Blog = https://modelserving.com
    BentoML Twitter = http://twitter.com/bentomlai

[options]
packages = find:
install_requires =
    bentoml>=1.0.0rc0
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools>=59.0
    setuptools-scm>=6.2.3
    wheel
zip_safe = False

[options.packages.find]
include =
    *.py
exclude = 
    *template
    build_scripts

[global]
verbose = true

[bdist_wheel]
universal = False
keep_temp = true

[sdist]
formats = gztar
